--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require-dev": {
         "laravel/pint": "^1.13",
         "pestphp/pest": "^2.0",
-        "symfony/var-dumper": "^7.0",
+        "symfony/var-dumper": "^6.4.0 || ^7.0",
         "guzzlehttp/guzzle": "^7.0"
     },
     "autoload": {
