--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "php": "~8.1.0|~8.2.0|~8.3.0",
         "apiboard/php-openapi": "^1.0",
+        "psr/http-client": "^1.0",
         "psr/http-message": "^1.1 || ^2.0",
         "psr/log": "^2.0 || ^3.0"
     },
