--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "license": "MIT",
     "require": {
         "php": "~8.1.0|~8.2.0|~8.3.0",
-        "apiboard/php-openapi": "^2.0",
-        "psr/log": "^2.0 || ^3.0"
+        "apiboard/php-openapi": "^2.0"
     },
     "require-dev": {
         "laravel/pint": "^1.13",
